@startuml
package "Cancer-Research" {
  Entity Gene {
    identifier
    --
    name
    - essentialScore
  }
  Entity SynLet {
    geneId1
    geneId2
    --
    score
  }
  Entity Being {
    id
    --
    name
  }
  
  Gene }|--|| Being
  SynLet }|--|| Gene
  SynLet }|--|| Gene
  Gene }|--|{ Gene : Mapping
}
@enduml
